--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -8,7 +8,7 @@
 <link rel="import" href="../discount-display-card/discount-display-card.html">
 <link rel="import" href="../walkin-analysis-card/walkin-analysis-card.html">
 <link rel="stylesheet" type="text/css" href="../../styles/styles.css">
-<link rel="import" href="../Transport/zonetostudent-card/zonetostudent-card.html">
+<!-- <link rel="import" href="../Transport/zonetostudent-card/zonetostudent-card.html"> -->
   <dom-module id="app-list">
   <template>
   <style>
@@ -79,11 +79,11 @@
             </div>
           </section>
 
-          <section data-category="fee-reports">
+          <!-- <section data-category="fee-reports">
             <div class="col-md-12">
               <fee-reports></fee-reports>
             </div>
-          </section>
+          </section> -->
 
           <section data-category="followup-details">
             <div class="col-md-12">
@@ -464,6 +464,26 @@
           <section data-category="enrollment-dashboard-card">
             <div class="col-md-12">
               <enrollment-dashboard-card></enrollment-dashboard-card>
+            </div>
+          </section>
+           <section data-category="transport-fee-collection-home-card">
+            <div class="col-md-12">
+              <transport-fee-collection-home-card></transport-fee-collection-home-card>
+            </div>
+          </section>
+          <section data-category="transport-daily-collection-report">
+            <div class="col-md-12">
+              <transport-daily-collection-report></transport-daily-collection-report>
+            </div>
+          </section>
+          <section data-category="transport-pdc-collection-report">
+            <div class="col-md-12">
+              <transport-pdc-collection-report></transport-pdc-collection-report>
+            </div>
+          </section>
+          <section data-category="zonedistance-card">
+            <div class="col-md-12">
+              <zonedistance-card></zonedistance-card>
             </div>
           </section>
           <!-- <section data-category="fee-card">
