--- a/app/elements/daycollection-report/daycollection-report.html
+++ b/app/elements/daycollection-report/daycollection-report.html
@@ -141,6 +141,8 @@
         this.hidetotal=true;
         document.querySelector('#daycollectiontype').selected=-1;
         type="";
+        document.querySelector('fromdate-icon-pickercard').FnClear();
+        document.querySelector('todate-icon-pickercard').FnClear();
       },
       FnSelectType:function(e){
         this.flag=1;
