--- a/app/elements/discount-type-ui-card/discount-type-ui-card.html
+++ b/app/elements/discount-type-ui-card/discount-type-ui-card.html
@@ -1,6 +1,6 @@
 
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
-<link rel="import" href="..\..\bower_components/discount-display-card/discount-display-card.html">
+<!-- <link rel="import" href="..\..\bower_components/discount-display-card/discount-display-card.html"> -->
 
 <dom-module id="discount-type-ui-card">
   <template>
