--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -348,3 +348,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="enrollment-dashboard-card/enrollment-dashboard-card.html">
 <link rel="import" href="caution-deposit-card/caution-deposit-card.html">
 <link rel="import" href="follow-up-service/follow-up-service.html">
+<link rel="import" href="transport-fee-collection-home-card/transport-fee-collection-home-card.html">
+<link rel="import" href="transport-fee-collection-service/transport-fee-collection-service.html">
+<link rel="import" href="transport-zonemappinginfo-card/transport-zonemappinginfo-card.html">
+<link rel="import" href="transport-collection-feeinfo-card/transport-collection-feeinfo-card.html">
+<link rel="import" href="transport-collection-discountinfo-card/transport-collection-discountinfo-card.html">
+<link rel="import" href="transport-collection-paymentinfo-card/transport-collection-paymentinfo-card.html">
+<link rel="import" href="transport-collection-receiptinfo-card/transport-collection-receiptinfo-card.html">
+<link rel="import" href="transport-collection-studentinfo-card/transport-collection-studentinfo-card.html">
+<link rel="import" href="transport-collection-paymenttype-card/transport-collection-paymenttype-card.html">
+<link rel="import" href="transport-collection-payment-history-card/transport-collection-payment-history-card.html">
+<link rel="import" href="transport-collection-fee-entry-card/transport-collection-fee-entry-card.html">
+<link rel="import" href="transport-collection-fee-edit-card/transport-collection-fee-edit-card.html">
+<link rel="import" href="transport-collection-paymentfeetype-card/transport-collection-paymentfeetype-card.html">
+<link rel="import" href="transport-collection-payment-history-itemcard/transport-collection-payment-history-itemcard.html">
+<link rel="import" href="transport-collection-receiptinfo-item-card/transport-collection-receiptinfo-item-card.html">
+<link rel="import" href="transport-collection-receiptinfo-print-card/transport-collection-receiptinfo-print-card.html">
+<link rel="import" href="transport-collection-payment-installment-card/transport-collection-payment-installment-card.html">
+<link rel="import" href="transport-daily-collection-report/transport-daily-collection-report.html">
+<link rel="import" href="transport-pdc-collection-report/transport-pdc-collection-report.html">
+<link rel="import" href="transport-collection-paymentsubmode-card/transport-collection-paymentsubmode-card.html">
+<link rel="import" href="zonedistance-card/zonedistance-card.html">
+<link rel="import" href="collection-receipt-datepicker/collection-receipt-datepicker.html">
+<link rel="import" href="collection-receipt-transaction-datepicker/collection-receipt-transaction-datepicker.html">
+<link rel="import" href="collection-discountinfo-card/collection-discountinfo-card.html">
+<link rel="import" href="collection-discount-datepicker/collection-discount-datepicker.html">
+<link rel="import" href="collection-receipt-card/collection-receipt-card.html">
