--- a/app/elements/transport-editdelete-cheque/transport-editdelete-cheque.html
+++ b/app/elements/transport-editdelete-cheque/transport-editdelete-cheque.html
@@ -40,7 +40,8 @@
       </thead>
       </table>
     </div>    
-    <transportfee-service id="transportservice"></transportfee-service>
+    <transport-fee-collection-service id="transportservice"></transport-fee-collection-service>
+    <!-- <transportfee-service id="transportservice"></transportfee-service> -->
   </template>
   <script>
   (function() {
