--- a/app/elements/transport-receipt-outcard/transport-receipt-outcard.html
+++ b/app/elements/transport-receipt-outcard/transport-receipt-outcard.html
@@ -3,7 +3,8 @@
 <link rel="import" href="..\feereceipt-card/feereceipt-card.html">
 <script type="text/javascript" src="../../scripts/jspdf.debug.js"></script>
 <script type="text/javascript" src="../../scripts/jspdf.min.js"></script>
-<script type="text/javascript" src="http://html2canvas.hertzen.com/build/html2canvas.js"></script>
+<!-- <script type="text/javascript" src="http://html2canvas.hertzen.com/build/html2canvas.js"></script> -->
+<script type="text/javascript" src="../../scripts/html2canvas.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.js"></script>
 <dom-module id="transport-receipt-outcard">
