--- a/app/elements/transport-receipt/transport-receipt.html
+++ b/app/elements/transport-receipt/transport-receipt.html
@@ -6,7 +6,8 @@
 <link rel="import" href="..\..\bower_components/paper-button/paper-button.html">
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.js"></script>
-<script type="text/javascript" src="http://html2canvas.hertzen.com/build/html2canvas.js"></script>
+<script type="text/javascript" src="../../scripts/html2canvas.js"></script>
+<!-- <script type="text/javascript" src="http://html2canvas.hertzen.com/build/html2canvas.js"></script> -->
 
 <dom-module id="transport-receipt">
   <template>
