--- a/app/elements/transporttodate-icon-pickercard/transporttodate-icon-pickercard.html
+++ b/app/elements/transporttodate-icon-pickercard/transporttodate-icon-pickercard.html
@@ -56,7 +56,7 @@
         if(dd<10)
           dd="0"+dd;
         var yy=d.getFullYear();
-        var dat=mm+"/"+dd+"/"+yy;
+        var dat=dd+"/"+mm+"/"+yy;
         localStorage.setItem("localsess_to_date",dat);      
       },
       FnShowDialog:function(){
@@ -87,7 +87,7 @@
           if(dd<10)
           dd="0"+dd;
           var yy=d.getFullYear();
-          var dat=mm+"/"+dd+"/"+yy;
+          var dat=dd+"/"+mm+"/"+yy;
           localStorage.setItem("localsess_to_date",dat); 
         }
       },
