--- a/app/elements/enquiry-card/enquiry-card.html
+++ b/app/elements/enquiry-card/enquiry-card.html
@@ -66,7 +66,7 @@
     Polymer({
       is: 'enquiry-card',
       ready:function(){
-        this.$.service.fetchacademicyearService();
+        // this.$.service.fetchacademicyearService();
       },
       FnSetDefaultYear:function(){
         this.selectedval=localStorage.getItem("curr_sess_academicyear");
