--- a/app/elements/pre-apps/pre-apps.html
+++ b/app/elements/pre-apps/pre-apps.html
@@ -501,7 +501,8 @@
         var month=dt.getMonth()+1;
         yr1=(dt.getFullYear()-1)-2000;
         yr2=(dt.getFullYear())-2000;
-        yearsxz='AY-'+(dt.getFullYear())+'-'+(dt.getFullYear()+1);
+        // yearsxz='AY-'+(dt.getFullYear())+'-'+(dt.getFullYear()+1);
+        yearsxz=localStorage.getItem("curr_sess_academicyear");
         this.academicyear=yearsxz;
       } else {
         enrolltype=null;
@@ -513,7 +514,9 @@
       var dt=new Date();
       yr1=(dt.getFullYear()+0)-2000;
       yr2=(dt.getFullYear()+1)-2000;
-      yearsxz='AY-'+(dt.getFullYear()+1)+'-'+(dt.getFullYear()+2);
+      // yearsxz='AY-'+(dt.getFullYear()+1)+'-'+(dt.getFullYear()+2);
+      yearsxz=localStorage.getItem("curr_sess_nextacademicyear");
+      // alert(yearsxz);
       this.academicyear=yearsxz;
     },
     nextyearhandler:function(e){
@@ -523,7 +526,8 @@
         var dt=new Date();
         yr1=(dt.getFullYear()+0)-2000;
         yr2=(dt.getFullYear()+1)-2000;
-        yearsxz='AY-'+(dt.getFullYear()+1)+'-'+(dt.getFullYear()+2);
+        // yearsxz='AY-'+(dt.getFullYear()+1)+'-'+(dt.getFullYear()+2);
+        yearsxz=localStorage.getItem("curr_sess_nextacademicyear");
         this.academicyear=yearsxz;
       }else{
         enrolltype=null;
@@ -1366,7 +1370,8 @@
       var dt=new Date();
       yr1=(dt.getFullYear()+0)-2000;
       yr2=(dt.getFullYear()+1)-2000;
-      yearsxz='AY-'+(dt.getFullYear()+1)+'-'+(dt.getFullYear()+2);
+      // yearsxz='AY-'+(dt.getFullYear()+1)+'-'+(dt.getFullYear()+2);
+      this.academicyear=localStorage.getItem("curr_sess_nextacademicyear");
       this.academicyear=yearsxz;
       document.querySelector('enquiry-datepicker').ready();
       document.querySelector('dateofbirth-datepicker').ready();
