--- a/app/elements/todate-icon-pickercard/todate-icon-pickercard.html
+++ b/app/elements/todate-icon-pickercard/todate-icon-pickercard.html
@@ -67,6 +67,7 @@
       },
       FnClear:function(){
         this.showdate = moment(new Date()).format('L');
+        localStorage.setItem("localsess_to_date",this.showdate); 
       },
       FnSetDate:function(value){        
         this.showdate=moment(new Date(value)).format('L');
