--- a/app/elements/transportfromdate-icon-pickercard/transportfromdate-icon-pickercard.html
+++ b/app/elements/transportfromdate-icon-pickercard/transportfromdate-icon-pickercard.html
@@ -56,7 +56,7 @@
         if(dd<10)
           dd="0"+dd;
         var yy=d.getFullYear();
-        var dat=mm+"/"+dd+"/"+yy;
+        var dat=dd+"/"+mm+"/"+yy;
         localStorage.setItem("localsess_from_date",dat);
       },
       FnShowDialog:function(){
@@ -80,7 +80,7 @@
           if(dd<10)
             dd="0"+dd;
           var yy=d.getFullYear();
-          var dat=mm+"/"+dd+"/"+yy;
+          var dat=dd+"/"+mm+"/"+yy;
           localStorage.setItem("localsess_from_date",dat);
         }
       },
